@@ -1,3 +1,8 @@
+2005-07-28  Mark McLoughlin  <markmc@redhat.com>
+
+	* lib/config.py.in: add ~/.thumbnails to 
+	directories-to-ignore
+
 2005-07-27  Mark McLoughlin  <markmc@redhat.com>
 
 	* lib/protosession.py: remove stale X lock files and
